Se Creo el Modulo Mesero Con su respectivo layout

--- a/OasisFamiliarWebSite/Views/Account/Login.cshtml
+++ b/OasisFamiliarWebSite/Views/Account/Login.cshtml
@@ -70,12 +70,12 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-5">
-                    <img src="~/Content/img/Diseño sin título (2).png" class="img-fluid" alt="" />
+                    <img src="~/Content/img/background.jpg" width="80%" class="img-fluid" alt="" />
                 </div>
                 <div class="col-lg-7 px-5 pt-5">
                     <center>
                         <h1 class="font-weight-bold py-3">
-                            <img src="~/Content/img/Casa-de-Dios-New-Logo1.png"
+                            <img src="~/Content/img/logo.jpeg"
                                  alt="75px"
                                  height="75px" />
                         </h1>
