--- a/OasisFamiliarWebSite/Views/Customer/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Index.cshtml
@@ -1,7 +1,79 @@
-﻿
+﻿@model IEnumerable<Model.DataModel.Menu>
+
 @{
 
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
-<h2>Modulo de Cliente</h2>
+<h3>Modulo de Cliente (MENU)</h3>
+
+
+<hr />
+<h4 style="color:white; align-content:center">Bebidas</h4>
+<hr />
+<div class="container" id="tourpackages-carousel">
+
+    <div class="row">
+
+        @foreach (var item in Model)
+        {
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail" style="background-color:black">
+                    <img src="http://placehold.it/500x300" alt="">
+                    <div class="caption">
+                        <h4>@item.nombre_Producto</h4>
+                        <p>Cerveza Nacional... Precio: $ @item.Precio</p>
+                        <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
+                    </div>
+                </div>
+            </div>
+        }
+    
+    </div><!-- End row -->
+
+</div><!-- End container -->
+
+
+<hr />
+<h4>Bocas</h4>
+<hr />
+<div class="container" id="tourpackages-carousel">
+
+    <div class="row">
+
+        <div class="col-xs-18 col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="http://placehold.it/500x300" alt="">
+                <div class="caption">
+                    <h4>Sopa de Tortilla</h4>
+                    <p>Boca</p>
+                    <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-18 col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="http://placehold.it/500x300" alt="">
+                <div class="caption">
+                    <h4>Tortilla frita</h4>
+                    <p>Boca</p>
+                    <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-18 col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="http://placehold.it/500x300" alt="">
+                <div class="caption">
+                    <h4>Balde Golden</h4>
+                    <p>Cerveza Nacional</p>
+                    <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
+                </div>
+            </div>
+        </div>
+
+    </div><!-- End row -->
+
+</div><!-- End container -->
