--- a/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
@@ -15,8 +15,8 @@
             background-color: black;
         }
 
-        h2 {
-            color:white;
+        h3 {
+            color:yellow;
         }
     </style>
 
