--- a/OasisFamiliarWebSite/Views/Account/Register.cshtml
+++ b/OasisFamiliarWebSite/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OasisFamiliarWebSite.Models.RegisterVM
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_LayoutReceptionist.cshtml";
 }
 
 <!DOCTYPE html>
@@ -14,12 +14,12 @@
 <body>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
-    
-    
-    @using (Html.BeginForm()) 
+
+
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
+
         <div class="form-horizontal">
             <h4>RegisterVM</h4>
             <hr />
@@ -31,7 +31,7 @@
                     @Html.ValidationMessageFor(model => model.Nombre_Usuario, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -39,17 +39,14 @@
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Crear Registro" class="btn btn-default" />
                 </div>
             </div>
         </div>
-    }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+     }
 </body>
 </html>
+
