--- a/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
@@ -24,7 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Ver Mesas", "Index", "Receptionist")</li>
-                    <li>@Html.ActionLink("Crear Factura", "Crear_Factura", "Receptionist")</li>
+                    <li>@Html.ActionLink("Crear Factura", "Register", "Account")</li>
                     <li>@Html.ActionLink("Ver Facturas Pendientes", "Contact", "Receptionist")</li>
                     <li>@Html.ActionLink("Historial", "Contact", "Receptionist")</li>
                     <li>@Html.ActionLink("Salir Del Sistema", "Contact", "Receptionist ")</li>
