--- a/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
@@ -35,7 +35,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Customer")</li>
-                    <li>@Html.ActionLink("Menu", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Menu", "MenuPage", "Customer")</li>
                     <li>@Html.ActionLink("Cuenta", "Index", "Customer")</li>
                     <li>@Html.ActionLink("Salir", "Contact", "Receptionist")</li>
                 </ul>
