--- a/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
@@ -3,12 +3,22 @@
 <head>
     <title>@Page.Title</title>
     @RenderSection("head", required: false)
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>@ViewBag.Title - Siveresoft-UTEC</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <style>
+
+    </style>
+
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
