creacion de tabla en el modulo mesero filtros

--- a/OasisFamiliarWebSite/Views/Receptionist/Factura.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/Factura.cshtml
@@ -30,7 +30,7 @@
         </tr>
         <tr>
             <td>
-                @* un pequeño espacio para que se vear ordenado *@
+                @* un pequeño espacio para que se vea ordenado *@
             </td>
         </tr>
 
@@ -62,7 +62,7 @@
 </table>
 <div class="btn-group" role="group" aria-label="Basic example">
     <button type="button" class="btn btn-warning">Agregar</button>
-    
+    <button type="button" class="btn bg-primary">Pendiente De Pago</button>
     <button type="button" class="btn btn-success">Pagar</button>
 
 </div>
