--- a/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar">vvv</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Mesas", "Index", "Receptionist")</li>
                     <li>@Html.ActionLink("Factura", "Factura", "Receptionist")</li>
-                    <li>@Html.ActionLink("Ver Facturas Pendientes", "Contact", "Receptionist")</li>
+                    <li>@Html.ActionLink("Ver Facturas Pendientes", "VerFacturaPendientes", "Receptionist")</li>
                     <li>@Html.ActionLink("Historial", "Contact", "Receptionist")</li>
                     <li>@Html.ActionLink("Salir Del Sistema", "Contact", "Receptionist ")</li>
                 </ul>
