--- a/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
@@ -7,6 +7,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Siveresoft-UTEC</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -16,7 +19,16 @@
         }
 
         h3 {
-            color:yellow;
+            color: yellow;
+        }
+
+        #contenido {
+            position: fixed;
+            top: 80px;
+            bottom: 80px;
+            left: 0;
+            right: 0;
+            overflow: auto;
         }
     </style>
 
@@ -43,6 +55,7 @@
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
