se creo la vista historia , y se comenzo a crear el filtro de la pagemenu

--- a/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
@@ -36,7 +36,7 @@
                     <li>@Html.ActionLink("Mesas", "Index", "Receptionist")</li>
                     <li>@Html.ActionLink("Factura", "Factura", "Receptionist")</li>
                     <li>@Html.ActionLink("Ver Facturas Pendientes", "VerFacturaPendientes", "Receptionist")</li>
-                    <li>@Html.ActionLink("Historial", "Contact", "Receptionist")</li>
+                    <li>@Html.ActionLink("Historial", "Historial", "Receptionist")</li>
                     <li>@Html.ActionLink("Salir Del Sistema", "Contact", "Receptionist ")</li>
                 </ul>
 
