--- a/OasisFamiliarWebSite/Views/Receptionist/MenuPage.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/MenuPage.cshtml
@@ -4,85 +4,233 @@
 
     Layout = "~/Views/Shared/_LayoutReceptionist.cshtml";
 }
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-<div style="text-align:center;">
-    <h2 style="color: white; font-weight:bold">ORDENAR AHORA</h2>
-</div>
-
-<div style="float:inherit">
-    <div class="btn-group" style="margin: auto; display: flex; flex-direction: row; justify-content: center;">
-        <button type="button" class="btn btn-outline-primary active" data-target="pagado">Todos</button>
-        <button type="button" class="btn btn-outline-primary" data-target="pendiente">Bebidas</button>
-        <button type="button" class="btn btn-success btn-outline" data-target="cancelado">Boca</button>
-        <button type="button" class="btn btn-primary" data-target="all">Platos</button>
-        <button type="button" class="btn btn-success-outline">Success</button>
+<div class="container">
+    <div style="text-align:center;">
+        <h2>ORDENAR AHORA</h2>
     </div>
-</div>
-
-<!--Modal information-->
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
-            </div>
-            <div class="modal-body">
-                <h1>Information</h1>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <!--Modal information-->
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <h1>Information</h1>
+                    <div>
+                        <label for="staticEmail" class="col-sm-2 col-form-label">Mesa:</label>
+                        <input type="text" readonly class="form-control edit_id" id="Mesa" name="Mesa" placeholder="#">
+                    </div>
+                    <div>
+                        <label for="staticEmail" class="col-sm-2 col-form-label">Cantidad:</label>
+                        <input type="number" class="form-control" id="paco" name="Mesa" min="1" value="1">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-<!--Modal information-->
 
-<div class="container" id="tourpackages-carousel">
-
+  
+    <!--Modal information-->
+    <!-- Contenido del menu -->
     <div class="row">
-        @{string title = ""; }
 
-        @foreach (var item in Model)
-        {
 
-            if (title != item.Tipo_Producto)
-            {
-                <hr />
-                <h4 style="color:white; align-content:center">@item.Tipo_Producto</h4>
-                <hr />
+        <section class="content">
+            <div class="panel-body">
+                <div class="btn-group" style="margin: auto; display: flex; flex-direction: row; justify-content: center;">
+                    <button type="button" class="btn btn-success btn-filter" data-target="Bebida">Bebida</button>
+                    <button type="button" class="btn btn-warning btn-filter" data-target="Boca">Boca</button>
+                    <button type="button" class="btn btn-danger btn-filter" data-target="Platos">Platos</button>
+                    <button type="button" class="btn btn-default btn-filter" data-target="all">Todos</button>
+                </div>
+                <button type="button" class="btn btn-primary edit_button" data-toggle="modal" data-target="#myModal" data-id="1">test</button>
 
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail" style="background-color:black">
-                        <img src="http://placehold.it/500x300" alt="">
-                        <div class="caption">
-                            <h4>@item.nombre_Producto</h4>
-                            <p>Cerveza Nacional... Precio: $ @item.Precio</p>
-                            <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
-                        </div>
-                    </div>
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" data-id="1">Open Modal</button>
+
+                <div class="table-container">
+                    <table class="table table-filter">
+                        <tbody>
+
+                            @{string title = ""; }
+                            @{string title_prev = ""; }
+
+
+                            @foreach (var item in Model)
+                            {
+
+
+
+                                if (title == "" && title_prev == "")
+
+                                {
+                                    <tr data-status="Bebida">
+                                        @Html.Raw("<div class='row'>");
+                                        <td>
+                                            Bebida
+                                        </td>
+                                        <div class="col-xs-18 col-sm-6 col-md-4">
+                                            <div class="thumbnail">
+                                                <img src="http://placehold.it/500x300" alt="">
+                                                <div class="caption">
+                                                    <h4>@item.nombre_Producto</h4>
+                                                    <p>Cerveza  BEBIDA Nacional... Precio:$ @item.Precio</p>
+                                                    <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </tr>
+
+
+
+                                }
+                                else
+                                {
+
+
+                                    if (title == item.Tipo_Producto)
+                                    {
+                                        <tr data-status="Boca">
+                                            <div class="col-xs-18 col-sm-6 col-md-4">
+                                                <div class="thumbnail">
+                                                    <img src="http://placehold.it/500x300" alt="">
+                                                    <div class="caption">
+                                                        <h4>@item.nombre_Producto</h4>
+                                                        <p>Cerveza Nacional... Precio:$ @item.Precio</p>
+                                                        <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                        </tr>
+
+
+
+
+                                    }
+                                    else
+                                    {
+                                        <tr data-status="Platos">
+                                            @Html.Raw("</div>\n<div class='row'>");
+
+                                            <hr />
+                                            <h4 style="align-content:center">@item.Tipo_Producto</h4>
+                                            <hr />
+                                            <div class="col-xs-18 col-sm-6 col-md-4">
+                                                <div class="thumbnail">
+                                                    <img src="http://placehold.it/500x300" alt="">
+                                                    <div class="caption">
+                                                        <h4>@item.nombre_Producto</h4>
+                                                        <p>Cerveza Nacional... Precio:3333333 $ @item.Precio</p>
+                                                        <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </tr>
+
+                                    }
+                                }
+                                title = item.Tipo_Producto;
+
+                            }
+
+                            @Html.Raw("</div>")  <!-- End row -->
+
+
+
+
+                        </tbody>
+                    </table>
                 </div>
 
+            </div>
+        </section>
+
+    </div>
+</div>
+
+
+
+  
+    
+
+           
+
+<!-- End container -->
+<!-- Fin del Contenido del menu -->
+ 
+
+<div class="navbar navbar-inverse navbar-fixed-bottom" style="background-color: slategray; height: 10px;">
+    <div class="container">
+        <div class="navbar-header" style="text-align: center">
+            <h4 style="color:white;" class="entry-title">Factura : XC0001</h4>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li style="color:white;">@Html.ActionLink("Ver detalle", "Index", "Customer")</li>
+                <li style="color:white;">@Html.ActionLink("Pagar", "MenuPage", "Customer")</li>
+            </ul>
+
+        </div>
+    </div>
+</div>
+
+
+<!--Codigo para tomar valor de la tabla-->
+
+<script>
+
+    $(document).on("click", '.edit_button', function (e) {
+
+
+        var h1Text = document.querySelector(".entry-title").textContent;
+        console.log(h1Text);
+
+
+
+
+        var id = $(this).data('id');
+
+        console.log(id);
+        $(".edit_id").val(h1Text);
+
+
+        $(".modal-title").val("Crear Factura para Mesa" + id);
+    });
+
+
+    
+</script>
+<script>
+
+    $(document).ready(function () {
+
+        $('.star').on('click', function () {
+            $(this).toggleClass('star-checked');
+        });
+
+        $('.ckbox label').on('click', function () {
+            $(this).parents('tr').toggleClass('selected');
+        });
+
+        $('.btn-filter').on('click', function () {
+            var $target = $(this).data('target');
+            if ($target != 'all') {
+                $('.table tr').css('display', 'none');
+                $('.table tr[data-status="' + $target + '"]').fadeIn('slow');
+            } else {
+                $('.table tr').css('display', 'none').fadeIn('slow');
             }
-            else
-            {
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail" style="background-color:black">
-                        <img src="http://placehold.it/500x300" alt="">
-                        <div class="caption">
-                            <h4>@item.nombre_Producto</h4>
-                            <p>Cerveza Nacional... Precio: $ @item.Precio</p>
-                            <p><a href="#" class="btn btn-info btn-xs" role="button">Ordenar</a></p>
-                        </div>
-                    </div>
-                </div>
-            }
+        });
 
-            title = item.Tipo_Producto;
+    });
 
-        }
-
-    </div><!-- End row -->
-
-</div><!-- End container -->
+</script>
